--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,19 +1,45 @@
-# load php 8
+# Load PHP 8 with Apache
 FROM php:8.1-apache
 
-# install mysql extension for php
-RUN docker-php-ext-install mysqli pdo pdo_mysql && docker-php-ext-enable pdo_mysql
+# Install dependencies and PHP extensions
+RUN apt-get update && apt-get install -y \
+    git \
+    unzip \
+    libzip-dev \
+    && docker-php-ext-install zip mysqli pdo pdo_mysql \
+    && a2enmod ssl \
+    && a2enmod rewrite
 
-# add file
-ADD ./php/apache2.conf /etc/apache2/apache2.conf
+# Install Composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# run mutex
+# Install prerequisites for GitHub CLI
+RUN apt-get install -y \
+    ca-certificates \
+    gnupg \
+    lsb-release \
+    && apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0 \
+    && apt-add-repository https://cli.github.com/packages \
+    && apt-get update
+
+# Install GitHub CLI
+RUN apt-get install -y gh
+
+# Add custom Apache configuration
+COPY ./php/apache2.conf /etc/apache2/apache2.conf
+
+# Set working directory
+WORKDIR /var/www/html
+
+# Copy application files
+COPY . .
+
+# Add Mutex configuration for Apache
 RUN echo "Mutex posixsem" >> /etc/apache2/apache2.conf
 
-# enable apache2 mods needed by nativecamp
-RUN a2enmod ssl
-RUN a2enmod rewrite
-
-# expose ports
+# Expose ports
 EXPOSE 443
 EXPOSE 80
+
+# Start Apache
+CMD ["apache2-foreground"]
